fixing transition on mobile

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -43,7 +43,9 @@ a {
 	width: 30em;
 	height: 100%;
 	transition: all 0.5s cubic-bezier(0.49, 0.12, 0.02, 1);
+	-webkit-transition: all 0.5s cubic-bezier(0.49, 0.12, 0.02, 1);
 	transform: translateX(100%) translate3d(0, 0, 0);
+	-webkit-transform: translateX(100%) translate3d(0, 0, 0);
 	z-index: 2;
 }
 
@@ -59,7 +61,9 @@ a {
 	width: 30%;
 	height: 100%;
 	transition: all 0.5s cubic-bezier(0.49, 0.12, 0.02, 1);
+	-webkit-transition: all 0.5s cubic-bezier(0.49, 0.12, 0.02, 1);
 	transform: translate3d(0, 0, 0);
+	-webkit-transform: translate3d(0, 0, 0);
 	border-left: 1px black solid;
 	box-shadow: -1em 0em 20em -1em black;
 	z-index: 2;
